# NeoShell

./: .gitignore  CLAUDE.md  Cargo.toml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: app.rs  i18n.rs  lib.rs  proxy.rs  tunnel.rs  updater.rs
core/src/ssh/: mod.rs
core/src/storage/: mod.rs
core/src/terminal/: mod.rs
launcher/: Cargo.toml
launcher/src/: main.rs
scripts/: build-linux.sh  build-macos.sh  build-windows.sh  entitlements.plist  neoshell.wxs  publish-update.sh  sign-macos.sh
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/storage/: mod.rs
src/ssh/: mod.rs
src/stores/: connectionStore.ts  terminalStore.ts
src/terminal/: mod.rs
website/: index.html
website/updates/: update.json
